# agentor

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.cursor/rules/: agent-delegation-model.mdc  agent-system-architecture.mdc  data-flow-diagrams.mdc  data-flow-patterns.mdc  google-integration-architecture.mdc  google-integration-flow.mdc  memory-system-architecture.mdc  memory-system-implementation.mdc  model-context-protocol.mdc
.giga/: specifications.json
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
docs/: README.md  analytics.js  docs.json  google_oauth_setup_guide.mdx  index.md  index.mdx  lite-mcp-guide.md  tools-and-mcp.md  tools-and-mcp.mdx
docs/api/: index.md
docs/examples/: lite_mcp_example.py  mcp_server.py
examples/: agent.py  agents-intro.ipynb  any_llm.py  delegated_access.py  demo.py  desktop_oauth_demo.py  google_agent_demo.py  google_backend_tool.py  mcp_server.py  memory_agent.py  openai-academy.ipynb  scrapegraphai_example.py
examples/agent-server/: README.md  agent.py  client.py  main.py  stream_client.py
examples/tools/: README.md  calculator.py  exa_search.py  fetch.py  git.py  (+13 more)
search/: search_index.json
tests/: test_a2a.py  test_agents.py  test_agents_v2.py  test_base_tool.py  test_deployment.py  test_durable_agent.py  test_llm.py  test_mcp.py  test_memory.py  test_new_tools.py  test_runtime.py  test_sdk.py  test_tool_convertor.py  test_tool_search.py  test_tools.py
(+110 files in other folders)
