[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerozen"
version = "0.1.0"
description = "LLMs in Zen mode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.7.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "python-dotenv>=1.0.0",
    "openai>=1.97.0",
    "openai-agents>=0.2.2",
]

[project.scripts]
zen="zerozen.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
